== In Git

=== Bugfixes
* Require profile option causes a NoMethodError for Cucumber with JRuby (#601 John Firebaugh)
* Deprecations warnings with Spork + Cucumber + RSpec 2.0. (#619 Brian Cardarella)
* Cucumber 0.7.3 not compatible with Gherkin 1.0.30. (#618 Aslak Hellesøy)

=== Removed features
* The --no-diff option is removed. If you're using RSpec you will *always* get diffs. (Aslak Hellesøy)

=== Changed Features
* Upgraded to be compatible with rspec 2.0.0.beta.10 (Aslak Hellesøy)
* Ruby snippets will use "([^"]*)" instead of "([^\"]*)"$/ - wasn't properly fixed in 0.7.1. (Aslak Hellesøy)

== 0.7.3 (2010-05-17)

=== New Features
* Table cells can now contain escaped bars - \| and escaped backslashes - \\. (Gregory Hnatiuk, Aslak Hellesøy)
* Added support for Around hooks. (#605 John Firebaugh)

== 0.7.2 (2010-05-03)

=== Bugfixes
* REALLY add backwards compatibility fix (with deprecation warning) for legacy 0.6.4 formatters. (Aslak Hellesøy)

== 0.7.1 (2010-05-03)

=== Bugfixes
* Add backwards compatibility fix (with deprecation warning) for legacy 0.6.4 formatters. (Aslak Hellesøy)

=== Changed Features
* Ruby and Javascript snippets will use "([^"]*)" instead of "([^\"]*)"$/ (Aslak Hellesøy)

== 0.7.0 (2010-05-02)

This release is an important milestone for Cucumber. A new parser (the gherkin gem) parses feature
files 50-100 times faster than with 0.6.x and previous releases. Make sure you read the upgrade
instructions! http://wiki.github.com/aslakhellesoy/cucumber/upgrading

== 0.7.0.beta.8 (2010-04-29)

=== Bugfixes
* Inconsistent order of execution Background and Before in 0.7.0.beta.2 (#600 Mike Sassak)
* Make sure both lexing and parsing errors are captured and reported with line number (Gregory Hnatiuk)

== 0.7.0.beta.7 (2010-04-28)

=== Bugfixes
* Depend on gherkin-1.0.22, which should now make things work on Windows and Ruby 1.8.x-1.9.x. (Aslak Hellesøy)

== 0.7.0.beta.6 (2010-04-28)

=== Bugfixes