@@ -5,6 +5,9 @@
 * Deprecations warnings with Spork + Cucumber + RSpec 2.0. (#619 Brian Cardarella)
 * Cucumber 0.7.3 not compatible with Gherkin 1.0.30. (#618 Aslak Hellesøy)
 
+=== New features
+* JSON formatters (json and json_pretty). (Jari Bakken)
+
 === Removed features
 * The --no-diff option is removed. If you're using RSpec you will *always* get diffs. (Aslak Hellesøy)
 
